# kindpath-analyser

./: .bundle_registry.json  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analyse.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
core/: __init__.py  corpus_analyser.py  divergence.py  feature_extractor.py  fingerprints.py  influence_mapper.py  ingestion.py  psychosomatics.py  search.py  segmentation.py  solfeggio.py  spike_detector.py  stem_separator.py  temporal_context.py  vocal_prosodics.py
docs/: KINDPRESS_CONSTANTS_ENGINE.md  KINDPRESS_SPEC.md  SCHEMA_VERSIONS.md
fingerprints/: daws.json  eras.json  genres.json  instruments.json  lineages.json
kindpath_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kindpress/: __init__.py  constants_engine.py  constants_runner.py  interact.py  press.py  reason.py  self_correction.py  transport.py  validate.py
reports/: report_generator.py
seedbank/: __init__.py  cdc.py  cloud_replication_queue.jsonl  deposit.py  events.jsonl  fork_log.json  fork_log.py  index.py  nanomap.py  provenance.py  query.py  recompute.py  residue_bridge.py  tags_registry.json  tags_registry.py
tests/: generate_fixtures.py  test_corpus_analyser.py  test_divergence.py  test_fingerprints.py  test_influence_mapper.py  test_ingestion.py  test_interact.py  test_kindpress.py  test_kindpress_constants_engine.py  test_kindpress_nanomap_integrity.py  test_kindpress_transport_pipeline.py  test_psychosomatics.py  test_report_generator.py  test_seedbank.py  test_segmentation.py  (+4 more)
(+23 files in other folders)
