[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindpath-analyser"
version = "0.1.0"
description = "KindPath Creative Analyser — frequency field analysis and seedbank"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "reports*", "seedbank*"]
